[headless] Fix screenshots with gpu enabled.

Turns out this is due to two things:
1) We were overriding ShouldCreateCompositorFrameSink in the browser
   compositor to always return false (which is unnecessary).
2) Contrary to what GpuBrowserCompositorOutputSurface and
   SoftwareBrowserCompositorOutputSurface do, the
   OffscreenBrowserCompositorOutputSurface wasn't letting the RWHI know
   about swapped frames.

This fixes both issues.

BUG=681614

Review-Url: https://codereview.chromium.org/2631263003
Cr-Commit-Position: refs/heads/master@{#444694}

Former-commit-id: f5077ffe4f7a3d8c053e8bd8b2070bc699ca937f