content/browser/compositor/offscreen_browser_compositor_output_surface.h
@@ -14,6 +14,7 @@
 #include "base/memory/weak_ptr.h"
 #include "build/build_config.h"
 #include "content/browser/compositor/browser_compositor_output_surface.h"
+#include "ui/events/latency_info.h"
 
 namespace ui {
 class ContextProviderCommandBuffer;
@@ -56,7 +57,7 @@ class OffscreenBrowserCompositorOutputSurface
   void SetSurfaceSuspendedForRecycle(bool suspended) override {};
 #endif
 
-  void OnSwapBuffersComplete();
+  void OnSwapBuffersComplete(const std::vector<ui::LatencyInfo>& latency_info);
 
   cc::OutputSurfaceClient* client_ = nullptr;
   gfx::Size reshape_size_;
